[gd_scene load_steps=34 format=3 uid="uid://c2lfu4lm6mdcg"]

[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_lw5ix"]
[ext_resource type="Texture2D" uid="uid://dgh425u7my2dt" path="res://assets/Enemy/Orc Crew/Orc/Death/Death-Sheet.png" id="2_bqybr"]
[ext_resource type="Texture2D" uid="uid://d3ib3v30evbuo" path="res://assets/Enemy/Orc Crew/Orc/Idle/Idle-Sheet.png" id="3_ysmqu"]
[ext_resource type="Texture2D" uid="uid://b6xj84qfw3akp" path="res://assets/Enemy/Orc Crew/Orc/Run/Run-Sheet.png" id="4_avy5y"]
[ext_resource type="Script" path="res://scripts/enemy_melee_weapon.gd" id="5_ef5yk"]
[ext_resource type="Texture2D" uid="uid://cn1dqm6u7bmu7" path="res://assets/Weapons/Bone/Bone.png" id="6_7rld3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_goce0"]
size = Vector2(20.5, 30.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_tg46g"]
atlas = ExtResource("2_bqybr")
region = Rect2(0, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_riags"]
atlas = ExtResource("2_bqybr")
region = Rect2(64, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_vd0uc"]
atlas = ExtResource("2_bqybr")
region = Rect2(128, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6csf"]
atlas = ExtResource("2_bqybr")
region = Rect2(192, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_4kdva"]
atlas = ExtResource("2_bqybr")
region = Rect2(256, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_t487m"]
atlas = ExtResource("2_bqybr")
region = Rect2(320, 0, 64, 36)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub7sq"]
atlas = ExtResource("3_ysmqu")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_667ka"]
atlas = ExtResource("3_ysmqu")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6lljo"]
atlas = ExtResource("3_ysmqu")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcegv"]
atlas = ExtResource("3_ysmqu")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1guy"]
atlas = ExtResource("4_avy5y")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ryia"]
atlas = ExtResource("4_avy5y")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ctqt"]
atlas = ExtResource("4_avy5y")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4150"]
atlas = ExtResource("4_avy5y")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkjgh"]
atlas = ExtResource("4_avy5y")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26863"]
atlas = ExtResource("4_avy5y")
region = Rect2(320, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ie1hw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg46g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_riags")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vd0uc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6csf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4kdva")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t487m")
}],
"loop": false,
"name": &"death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub7sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_667ka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6lljo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcegv")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1guy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ryia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ctqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4150")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkjgh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26863")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tk8mk"]
radius = 120.0

[sub_resource type="AtlasTexture" id="AtlasTexture_52chd"]
atlas = ExtResource("6_7rld3")
region = Rect2(15, 17, 16, 30)

[sub_resource type="Animation" id="Animation_e0njd"]
length = 0.001

[sub_resource type="Animation" id="Animation_l4op1"]
resource_name = "attack"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(11, 6), Vector2(7, 0), Vector2(13, 6), Vector2(11, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, -1.0472, 1.5708, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_mb5ev"]
resource_name = "attack_mirrored"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-11, 6), Vector2(-7, 0), Vector2(-13, 6), Vector2(-11, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0472, -1.5708, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="Animation" id="Animation_uf68h"]
resource_name = "idle"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(11, 6), Vector2(11, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_tdq15"]
resource_name = "idle_mirrored"
length = 0.5
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-11, 6), Vector2(-11, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionPolygon2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eabiv"]
_data = {
"RESET": SubResource("Animation_e0njd"),
"attack": SubResource("Animation_l4op1"),
"attack_mirrored": SubResource("Animation_mb5ev"),
"idle": SubResource("Animation_uf68h"),
"idle_mirrored": SubResource("Animation_tdq15")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_s8eby"]
radius = 35.1283

[node name="Enemy" type="CharacterBody2D"]
disable_mode = 1
collision_layer = 8
collision_mask = 263
motion_mode = 1
script = ExtResource("1_lw5ix")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.75)
shape = SubResource("RectangleShape2D_goce0")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ie1hw")
animation = &"death"
autoplay = "idle"
frame = 5
frame_progress = 1.0

[node name="VisiblityRegion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisiblityRegion"]
shape = SubResource("CircleShape2D_tk8mk")

[node name="HealthPoints" type="ProgressBar" parent="."]
offset_left = -19.0
offset_top = -21.0
offset_right = 22.0
offset_bottom = -15.0
show_percentage = false

[node name="Wander" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Weapon" type="CharacterBody2D" parent="."]
position = Vector2(-11, 6)
collision_layer = 16
script = ExtResource("5_ef5yk")

[node name="Sprite2D" type="Sprite2D" parent="Weapon"]
position = Vector2(-0.859, -10.2)
scale = Vector2(0.7, 0.7)
texture = SubResource("AtlasTexture_52chd")
metadata/_edit_lock_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Weapon"]
position = Vector2(-0.859, -10.2)
scale = Vector2(0.7, 0.7)
polygon = PackedVector2Array(3.1, -15, -4.1, -15, -4.1, -14.1, -5.1, -14.1, -5.1, -13.1, -6.1, -13.1, -6.1, -12.1, -7.1, -12.1, -7.1, -4.9, -6.1, -4.9, -6.1, -3.9, -5.1, -3.9, -5.1, -2.9, -4.1, -2.9, -4.1, -0.9, -3.1, -0.9, -3.1, 2.1, -2.1, 2.1, -2.1, 9.9, -3.1, 9.9, -3.1, 11.9, -4.1, 11.9, -4.1, 14.1, -3.1, 14.1, -3.1, 15, 5.1, 15, 5.1, 14.1, 6.1, 14.1, 6.1, 11.9, 5.1, 11.9, 5.1, 9.9, 4.1, 9.9, 4.1, 2.1, 5.1, 2.1, 5.1, -0.9, 6.1, -0.9, 6.1, -2.9, 7.1, -2.9, 7.1, -3.9, 8, -3.9, 8, -12.1, 7.1, -12.1, 7.1, -13.1, 6.1, -13.1, 6.1, -14.1, 3.1, -14.1)
disabled = true
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="Weapon"]
libraries = {
"": SubResource("AnimationLibrary_eabiv")
}
autoplay = "idle"

[node name="Timeout" type="Timer" parent="Weapon"]
wait_time = 0.8
one_shot = true

[node name="AttackRegion" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackRegion"]
shape = SubResource("CircleShape2D_s8eby")

[connection signal="body_entered" from="VisiblityRegion" to="." method="_on_visiblity_region_body_entered"]
[connection signal="body_exited" from="VisiblityRegion" to="." method="_on_visiblity_region_body_exited"]
[connection signal="timeout" from="Wander" to="." method="_on_wander_timeout"]
[connection signal="timeout" from="Weapon/Timeout" to="Weapon" method="_on_timeout_timeout"]
[connection signal="body_entered" from="AttackRegion" to="." method="_on_attack_region_body_entered"]
[connection signal="body_exited" from="AttackRegion" to="." method="_on_attack_region_body_exited"]
